libs/@local/hashql/eval/tests/ui/graph/read/entity/complex-object-error.jsonc
//@ run: fail
//@ description: Complex objects cannot be queried directly in filter expressions
// biome-ignore format: readability
["::core::graph::tail::collect",
  ["::core::graph::body::filter",
    ["::core::graph::head::entities", ["::core::graph::tmp::decision_time_now"]],
    ["fn", { "#tuple": [] }, { "#struct": { "vertex": "_" } }, "_",
      ["==",
        "vertex.id.entity_id",
        //~^ ERROR Cannot query against this complex object
        "vertex.id.entity_id"
        //~^ ERROR Cannot query against this complex object
      ]
    ]
  ]
]
